2007-10-11  Richard Guenther  <rguenther@suse.de>

PR c/33726
	* c-typeck.c (build_array_ref): Do not strip qualifiers from
	the array element type.

	* gcc.dg/pr33726.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129227 138bc75d-0d04-0410-961f-82ee72b054a4